# promscale_extension

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DockerMakefile  Dockerfile  Dockerfile.quick  INSTALL.md  Makefile  Makefile.release  NOTICE  README.md  RELEASING.md  Readme.md  alpine.Dockerfile  build.rs  create-upgrade-symlinks.sh  dev.Dockerfile  devenv.sh  extract-extension-version.sh  ha.Dockerfile  install-cargo-pgx.sh  migration-table.sql  move_sql.py  promscale.control  quick.Dockerfile  update-version.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  support.md
.github/workflows/: README.md  arm64.yaml  ci-2cache.yaml  ci-nocache.yaml  ci-sccache.yaml  ci.yaml  docker-sccache.yaml  docker.yaml  lint-sccache.yaml  lint.yaml  release-sccache.yaml  release.yaml  yank-0.5.3-packagecloud.yaml
docs/: sql-api.md  sql-tracing-tables.md
e2e/: Cargo.toml  README.md  build.rs
e2e/scripts/: after-create.sql  init.sql  load-data.sql  post-restore.sql  post-snapshot.sql  pre-dump.sql  pre-restore.sql  snapshot.sql
e2e/testdata/: create_ingest_temp_table.sql  defaults.sql  dummy-test.sql  info_view.sql  metric_view.sql  operation_materialization.sql  support.sql  tag_map.sql  trace_compression.sql  tracing_tags_uniqness.sql  views.sql
e2e/tests/: dump-restore-test.rs  golden-tests.rs  incremental-freeze-test.rs  ps_trace_delete_all_traces.rs  test.rs  upgrade-test.rs
e2e/tests/common/: mod.rs
e2e/tests/config/: mod.rs
e2e/tests/snapshots/: golden_tests__golden_test_testdata_defaults_sql.snap  golden_tests__golden_test_testdata_info_view_sql.snap  golden_tests__golden_test_testdata_support_sql.snap  golden_tests__golden_test_testdata_tag_map_sql.snap  golden_tests__golden_test_testdata_views_sql.snap  golden_tests__testdata__create_ingest_temp_table.sql.snap  golden_tests__testdata__dummy-test.sql.snap  golden_tests__testdata__info_view.sql.snap  golden_tests__testdata__large_tracing_tags_support.sql.snap  golden_tests__testdata__metric_view.sql.snap  golden_tests__testdata__tag_map.sql.snap  golden_tests__testdata__trace_compression.sql.snap  golden_tests__testdata__tracing_tags_uniqness.sql.snap  golden_tests__testdata__views.sql.snap
e2e/tests/util/: mod.rs
gendoc/: Cargo.toml
gendoc/src/: main.rs
migration/: README.md  migration-table.sql
migration/bootstrap/: 000-migration-table.sql  001-create-ext-schema.sql  002-stop-bgw.sql
migration/idempotent/: 001-base.sql  002-tag-operators.sql  003-matcher-functions.sql  004-ha.sql  005-metric-metadata.sql  006-exemplar.sql  007-tracing-tags.sql  008-tracing-functions.sql  009-tracing-views.sql  010-telemetry.sql  011-maintenance.sql  012-remote-commands.sql  012-trace-id-functions.sql  013-apply-config.sql  013-remote-commands.sql  013-tracing-maintenance.sql  014-extension-type-functions.sql  014-tracing-maintenance.sql  015-apply-config.sql  015-extension-function-permissions.sql  015-materialize_operations.sql  015-tag-map-support.sql  016-metric-rollup.sql  016-vacuum-engine.sql  017-backend-telemetry-buffer.sql  017-metric-downsampling.sql  017-metric-rollup.sql  018-job-telemetry-update.sql  018-metric-downsampling-maintenance.sql  018-metric-rollup-maintenance.sql  999-last.sql
migration/incremental/: 001-extension.sql  002-utils.sql  003-users.sql  006-tables.sql  007-matcher-operators.sql  008-install-uda.sql  012-tracing.sql  013-tracing-well-known-tags.sql  015-tracing-compression.sql  015-tracing-redesign.sql  016-remove-ee-schemas.sql  017-set-search-path.sql  018-grant-prom-roles.sql  018-series-partitions.sql  019-post-restore.sql  019-prom-installation-info.sql  019-series-partitions.sql  020-post-restore.sql  020-series-partitions.sql  021-initial-default.sql  022-jit-off.sql  023-materialize_operations.sql  023-privileges.sql  024-adjust_autovacuum.sql  025-remove-name-params.sql  025-tag-map-storage-type.sql  026-remove-name-param.sql  027-tag-map-storage-views.sql  028-refactor-mark-unused-series.sql  029-remove-unused-ingest-func.sql  030-remove-get-confirmed-unused-series.sql  031-remove-superfluous-tag_v-ops.sql  032-logical-epoch-to-time-epoch.sql  032-metric-rollup.sql  032-remove-non-empty-span-name-constraint.sql  033-metric-rollup.sql  033-metric-view.sql  034-backend-telemetry-buffer.sql  (+8 more)
pgtap-parse/: Cargo.toml
sql/: promscale--0.0.0--0.5.0.sql  promscale--0.0.0--0.5.1.sql  promscale--0.0.0--0.5.4.sql  promscale--0.0.0--0.7.0.sql  promscale--0.0.0.sql  promscale--0.1--0.1.1.sql  promscale--0.1.1.sql  promscale--0.1.2--0.1.3-beta.sql  promscale--0.1.2--0.1.3.sql  promscale--0.1.2.sql  promscale--0.1.3-beta.sql  promscale--0.1.3.sql  promscale--0.1.sql  promscale--0.2.0.sql  promscale--0.3.0--0.5.0.sql  promscale--0.3.0.sql  promscale--0.3.1--0.3.2.sql  promscale--0.3.1.sql  promscale--0.3.2.sql  promscale--0.5.0--0.5.2.sql  promscale--0.5.0--0.6.0.sql  promscale--0.5.0.sql  promscale--0.5.1--0.5.4.sql  promscale--0.5.1.sql  promscale--0.5.2.sql  promscale--0.5.4.sql  promscale--0.6.0.sql  promscale--0.7.0--0.8.0.sql  promscale--0.7.0.sql  promscale--0.8.0.sql
sql-tests/: Cargo.toml  README.md
src/: aggregate_utils.rs  backend_telemetry_buffer.rs  iterable_jsonb.rs  jsonb_digest.rs  lib.rs  palloc.rs  pg_imports.rs  prom_agg.rs  raw.rs  regex.rs  schema.rs  snappy.rs  support.c  support.d  support.rs  type_builder.rs  util.rs
templates/: idempotent-wrapper.sql  incremental-wrapper.sql  migration-wrapper.sql  promscale--0.0.0.sql  promscale.control
test-common/: Cargo.toml
tools/: changelog  package  smoke-test
(+103 files in other folders)
