[workspace]
members = ["test-common", "e2e", "sql-tests", "gendoc"]

[package]
name = "promscale"
version = "0.5.4"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "unwind" # Ensures that we don't abort a Postgres process
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1

[profile.dev]
panic = "unwind"
# It's currently broken on Apple Silicon. 1.64 seems to include a fix.
# lto = "thin"

[features]
default = ["pg14", "serde_json", "proptest"] # used by rust-analyzer in VSCode
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = ["serde_json", "proptest"]

[dependencies]
bincode = "1.3.1"
num_cpus = "1.13.1"
pgx = "0.3.1"
pgx-macros = "0.3.1"
proptest  = { version = "1.0.0", optional = true }
regex = "1.5.6"
sha2 = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.70", optional = true }
uluru = "3.0.0"

[build-dependencies]
askama = "0.11.0"

[dev-dependencies]
pgx-tests = "0.3.1"

[patch.crates-io]
pgx = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
pgx-macros = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
pgx-tests = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }

# from e2e workspace
test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
test-common = { path = "./test-common" }
