[workspace]
members = ["test-common", "e2e", "sql-tests", "gendoc", "pgtap-parse"]

[package]
name = "promscale"
version = "0.7.1-dev"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "unwind" # Ensures that we don't abort a Postgres process
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1

[profile.dev]
panic = "unwind"
# It's currently broken on Apple Silicon. Nightly seems to include a fix.
# If your tests fail with SIGSEGV try and use 1.64 or nightly.
# Finally, we can just comment it out because it no longer serves as 
# a workaround for another issue https://github.com/tcdi/pgx/pull/208
# lto = "thin"

[features]
default = ["pg14", "serde_json", "proptest"] # used by rust-analyzer in VSCode
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = ["serde_json", "proptest"]

[dependencies]
bincode = "1.3.3"
num_cpus = "1.13.1"
pgx = "0.6.1"
pgx-macros = "0.6.1"
proptest  = { version = "1.0.0", optional = true }
regex = "1.5.6"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.89", optional = true }
uluru = "3.0.0"

[build-dependencies]
askama = "0.11.1"

[dev-dependencies]
pgx-tests = "0.6.1"

# from e2e workspace
test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
test-common = { path = "./test-common" }
