[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
insta = "1.14.0"
postgres = "0.19.2"
pretty_env_logger = "0.4"
testcontainers = "0.12.0"
test-generator = "0.3.0"
similar = "2.1.0"
regex = "1.5.5"
md-5 = "0.10.1"
hex-literal = "0.3.4"

[build-dependencies]
build-deps = "^0.1"
