[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
hex = "0.4.3"
md-5 = "0.10.1"
pretty_env_logger = "0.4"
regex = "1.5.5"
similar = "2.1.0"
log = "0.4.17"
test-common = "0.1.0"
semver = "1.0.12"
postgres = "0.19.2"
testcontainers = "0.14.0"

[build-dependencies]
build-deps = "^0.1"
